# PPT_Agent

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/migrations/: env.py  script.py.mako
backend/migrations/versions/: 0001_init_users.py  0002_idempotency.py  0003_generation.py  0004_samples.py  0005_preferences.py  0006_security_events.py  0007_materials_and_drafts.py  0008_generation_general_mode.py  0009_generation_agent_state.py
backend/scripts/: bundle_ppt_engine.py  install_local_deps.bat  install_local_deps.sh  test_bundled_engine.py  test_pipeline_e2e.py
backend/src/: main.py
backend/src/agents/: agent_tools.py  base.py  llm_adapter.py  orchestrator.py  react_agent.py
backend/src/agents/middleware/: __init__.py  behavior_middleware.py  pii_middleware.py  trace_middleware.py
backend/src/api/: __init__.py  admin.py  assets.py  credentials.py  data_lifecycle.py  drafts.py  generations.py  ops.py  pagination.py  preferences.py  samples.py  security.py  traces.py  ws.py
backend/src/core/: config.py  errors.py  lifespan.py  observability.py  pii.py  security.py
backend/src/db/: session.py
backend/src/db/models/: __init__.py  api_key.py  base.py  credential.py  draft.py  embedding.py  generation_task.py  idempotency.py  parse_result.py  preference.py  sample.py  security_event.py  slide_asset.py  trace_stage.py  user.py
backend/src/integrations/: __init__.py  agentscope_compat.py  pptx_render_bridge.py  svg_pptx_bridge.py
backend/src/middleware/: idempotency.py  request_id.py
backend/src/models/: __init__.py
backend/src/scheduler/: cron_jobs.py  data_lifecycle.py  queue.py  run_worker.py  worker.py
backend/src/scripts/: import_material_library.py  seed_samples.py  smoke_react.py  smoke_test_importer.py
backend/src/services/data_lifecycle/: __init__.py  delete.py  export.py
backend/src/services/draft/: draft_service.py  lock.py
backend/src/services/export/: draft_exporter.py  source_attribution.py
backend/src/services/generation/: llm_client.py  pipeline.py  prompts.py  redo.py  reference_loader.py  token_estimator.py
backend/src/services/knowledge_base/: embedder.py  service.py
backend/src/services/material_importer/: __init__.py  classifier.py  extractor.py  importer.py
backend/src/services/parsing/: embed_writer.py  pipeline.py  slide_extractor.py  thumbnail.py
backend/src/services/preference/: __init__.py  extractor.py
backend/src/services/scoring/: __init__.py  font_scorer.py  layout_scorer.py  palette_scorer.py
backend/src/services/search/: material_search.py
backend/src/storage/: minio.py
backend/src/tools/: __init__.py  knowledge_retriever.py  pii_detector.py  pptx_renderer.py  sample_parser.py  style_normalizer.py  svg2pptx.py
backend/tests/: conftest.py
backend/tests/contract/: __init__.py  test_data_lifecycle.py  test_drafts_pact.py  test_generation_create.py  test_generation_crud.py  test_materials_pact.py  test_preferences.py  test_samples.py  test_trace.py  test_ws_events.py
backend/tests/e2e/: __init__.py  test_draft_export.py
backend/tests/integration/: __init__.py  test_data_delete.py  test_data_export.py  test_draft_lock.py  test_generation_e2e.py  test_material_extraction.py  test_preference_extract.py  test_sample_regression.py  test_samples_pii.py  test_source_attribution.py  test_token_budget.py  test_trace_redo.py
backend/tests/perf/: __init__.py  test_material_search_perf.py
backend/tests/unit/: __init__.py  test_agentscope_compat.py  test_config.py  test_errors.py  test_models_structure.py  test_pagination.py  test_pii.py  test_preference_ignore.py  test_sample_dedup.py  test_security.py  test_slide_extractor.py  test_style_normalizer.py  test_task_archive.py
(+113 files in other folders)
