[project]
name = "pptagent-backend"
version = "0.1.0"
description = "PPTagent MVP backend — generation / knowledge base / agent evolution"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.12",
    "websockets>=12.0",
    # Settings / validation
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pgvector>=0.3.6",
    # Cache / queue
    "redis>=5.0.0",
    # Object storage
    "minio>=7.2.0",
    # ─────────────────────────────────────────────────────────────
    # Local frameworks — AgentScope is a sibling repo, declared as
    # a Hatch path-dep below (resolved relative to pyproject.toml).
    # ─────────────────────────────────────────────────────────────
    "agentscope",
    # PII detection
    "presidio-analyzer>=2.2.0",
    "presidio-anonymizer>=2.2.0",
    # Observability
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-exporter-otlp>=1.27.0",
    "structlog>=24.4.0",
    "python-json-logger>=2.0.7",
    # LLM / embeddings
    "openai>=1.40.0",
    "tiktoken>=0.7.0",
    # PPTX / parsing
    "python-pptx>=0.6.23",
    "pdfplumber>=0.11.0",
    "python-docx>=1.1.0",
    "lxml>=5.3.0",
    "Pillow>=10.4.0",
    # Utils
    "httpx>=0.27.0",
    "tenacity>=9.0.0",
    "pyyaml>=6.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.12",
    "prometheus-client>=0.25.0",
    "orjson>=3.11.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "pact-python>=2.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "pre-commit>=3.8.0",
    "bandit>=1.7.9",
    "respx>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# Local editable deps — AgentScope is a sibling repo installed in
# editable mode so changes are picked up immediately.
[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel.shared-data]
# Nothing to ship at wheel-build time — both libs are dev-time deps.

[tool.uv]
# `uv pip install` will resolve these path-style deps correctly.
# For `pip` / `hatch` users, see backend/scripts/install_local_deps.sh.
dev-dependencies = []

# No additional index required — all local dependencies

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["migrations/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP", "N", "C4", "SIM", "RUF"]
ignore = ["E501", "B008", "B904", "RUF001", "RUF002", "RUF012", "RUF059", "RUF006", "RUF100", "UP042", "SIM115", "SIM105", "SIM103", "N812", "E741", "E711", "B023"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B", "N"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = [
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-fail-under=80",
    "-ra",
]
markers = [
    "contract: Pact contract tests",
    "integration: integration tests",
    "e2e: end-to-end tests",
    "perf: performance tests",
]

[tool.coverage.run]
source = ["src"]
omit = ["*/migrations/*", "*/tests/*"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "raise NotImplementedError", "if __name__ == .__main__.:"]

[tool.bandit]
exclude_dirs = ["tests", "migrations"]
skips = ["B101"]
